k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kubernetes-learning-gateway
  namespace: kubernetes-learning
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fastapi-virtualservice
  namespace: kubernetes-learning
spec:
  hosts:
  - "*"
  gateways:
  - kubernetes-learning-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: fastapi-service
        port:
          number: 8000
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: fastapi-service
        port:
          number: 8000
